--- a/about.html
+++ b/about.html
@@ -32,9 +32,9 @@
 <body style="text-align: center">
 
     <div id="settings" style="height:100vh;overflow-y:scroll;">
-        <img src="./icon.png" style="margin-top:10vh;width:25vw;max-width:160px;border-radius: 20px ;">
+        <img src="./icon.webp" style="margin-top:10vh;width:25vw;max-width:160px;border-radius: 20px ;">
         <H2>城通网盘解析器</H2>
-        <H4 id="update" style="padding:10px;">版本：Asaki(V2) 2.0.3</H4>
+        <H4 id="update" style="padding:10px;">版本：Asaki(V2) 2.0.4</H4>
         <H5>程序：<a href="https://qinlili.bid" target="_blank">琴梨梨</a></H5>
         <br>
         <button onclick="window.parent.postMessage('old', '*');">
